--- a/src/config.properties
+++ b/src/config.properties
@@ -2,14 +2,15 @@
 #
 #Change the values listed to a test with different parameters
 
+testruns=5
 #The number of different frames available
 pageframes=5
 
 #The number of different pages that could be requested
-differentpages=10
+differentpages=20
 
 #Amount of page requests to simulate
-pagerequests=25
+pagerequests=100
 
 #The distribution of page requests
 #  Options:
@@ -27,6 +28,6 @@ multiweight=3
 #The weight bias to set for weighted pages (USE INTEGER)
 #	This represents the likelihood a biased page will be requested
 #	The weight bias randomly assigns different increased weights for Multi Weighted
-#   1 = no weight
-#   10 = maximum weight (still not guarenteed to happen every time)
+#   1 = no weight (essentially random)
+#   10 = maximum weight (almost guaranteed)
 weightbias=10
